Fix wrong height unit

--- a/TaikoWebUI/wwwroot/css/app.css
+++ b/TaikoWebUI/wwwroot/css/app.css
@@ -6,7 +6,7 @@
 
 .loader-container {
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     height: 100dvh;
     position: fixed;
     top: 0;
